<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.fragment.GameResult2Fragment">

    <TableRow>

        <TextView

            android:text="@string/total_set"
            android:textColorLink="#0FFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtCountSet"
            android:focusable="false"
            android:layout_weight="1"/>

    </TableRow>

    <TableRow>

        <TextView
            android:text="@string/player_win_set"
            android:textColorLink="#0FFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtCountPlayerWin"
            android:focusable="false"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow>

        <TextView
            android:text="@string/com_win_set"
            android:textColorLink="#0FFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtCountComWint"
            android:focusable="false"
            android:layout_weight="1"/>
    </TableRow>
    <TableRow>

        <TextView
            android:text="@string/draw_set"
            android:textColorLink="#0FFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edtCountDraw"
            android:focusable="false"
            android:layout_weight="1"/>
    </TableRow>

</TableLayout>
